--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- 
+	Copyright 2024 Git.Training
+	-->
 <head>
 	<title>An Example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
