--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- 
-	Copyright 2024 Git.Training more text
+	Copyright 2024 Git.Training more text whatever
 	-->
 <head>
-	<title>An Example website</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content who cares
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2024</p>
 	</footer>
 </body>
 </html>
