adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!-- 
-	Deleted original content
+	Adding changes before rebasing conflict
+	Adding changes from the feature branch bigtrouble 
 	-->
 <head>
-	<title>This blows</title>
+	<title>Another one hits the dust</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +18,7 @@
 	<main class="container">
 	<!-- This is not supposed to happen -->
 		<p>
-			Why are you still keeping track
+			Just some content who cares
 		</p>
 	</main>
 	<footer class="container">
