mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- 
-	Adding changes before rebasing conflict
+	Deleted original content
 	-->
 <head>
-	<title>Another Title</title>
+	<title>This blows</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,9 +15,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- This is not supposed to happen -->
 		<p>
-			Just some content who cares
+			Why are you still keeping track
 		</p>
 	</main>
 	<footer class="container">
