local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,8 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014 some more text</p>
+		<p>&copy; Company 2014 some more text
+		what is this about</p>
 	</footer>
 </body>
 </html>
