simple html updates after stash apply

--- a/simple.html
+++ b/simple.html
@@ -19,11 +19,13 @@
 	<!-- This is not supposed to happen -->
 		<p>
 			Just some content who cares
+			Just some more content
 		</p>
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014 some more text
-		what is this about</p>
+		what is this about
+		Copyright infringement</p>
 	</footer>
 </body>
 </html>
