changes after git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes from the feature branch bigtrouble 
 	-->
 <head>
-	<title>Another one hits the dust</title>
+	<title>Another one hits the dust || Title Update</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
