Updating for tag v-1.2

--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 	<!-- This is not supposed to happen -->
 		<p>
 			Just some content who cares
-			Just some more content
+			Just some more content for comparing tags
 		</p>
 	</main>
 	<footer class="container">
